--- a/inspector/build
+++ b/inspector/build
@@ -28,49 +28,20 @@ set -e
 # builder settings
 project=`pwd`
 optim=0
-compile="-pipe -g3 -O$optim -Wall -fPIC -std=c11 -c  \
-    -I.  -I../jimsh  -I../dlr/dlrNative-src  -I/usr/include/gobject-introspection-1.0  \
-    -DJIM_EMBEDDED  -DBUILD_GIZMO
-    `pkg-config --cflags gtk+-3.0`"
+compile="-pipe -g3 -O$optim -Wall -fPIC -std=c11 -c  -I.  -I../../jimsh  -I/usr/include/gobject-introspection-1.0  `pkg-config --cflags gtk+-3.0`"
 link="-pipe -g3 -O$optim -Wall -fPIC -std=c11 -ldl"
 linkSO="-pipe -g3 -O$optim -Wall -fPIC -std=c11 -Wl,--export-dynamic  -shared"
 gtkLibs=" `pkg-config --libs gtk+-3.0`  -lgirepository-1.0"
 
 set -x
 
-# generate more C source.
-../jimsh/jimsh  ../jimsh/make-c-ext.tcl  initgizmo.tcl  > _initgizmo.c
+# build "dlr" extension for Jim.
+# include BUILD_GIZMO flag for GI support.
+cd ../dlrNative-src
+gcc $compile -DBUILD_GIZMO -o dlrNative.o  dlrNative.c
+gcc $linkSO -o dlrNative.so  dlrNative.o  /usr/lib/x86_64-linux-gnu/libffi.a  $gtkLibs
 
-# build gizmo executable.
-gcc $compile -o  _initgizmo.o  _initgizmo.c
-gcc $compile -o  main.o  main.c
-gcc $compile -o  dlrNative-src/dlrNative.o  dlrNative-src/dlrNative.c
-gcc $link  -o gizmo  \
-    main.o  \
-    _initgizmo.o  \
-    dlrNative-src/dlrNative.o  \
-    /usr/lib/x86_64-linux-gnu/libffi.a  \
-    ../jimsh/libjim.a  \
-    $gtkLibs
-
-# run automated tests
+# run inspector.
 cd $project
-rm -rf ./dlr/dlr-binding/gi/auto  ;# this forces regeneration of libgirepository wrapper scripts.
-rm -rf ./dlr/dlr-binding/glib/auto
-rm -rf ./dlr/dlr-binding/gtk/auto
-export JIMLIB=./dlr:./dlrNative-src
-#./gizmo  test.tcl
-
-
-cd inspector
-./build
-
-# check for memory leak
-#todo: valgrind
-exit 0
-valgrind  -q  --error-exitcode=1  --leak-check=full  --leak-resolution=high  \
-    --show-leak-kinds=definite,possible  --errors-for-leak-kinds=definite,possible  \
-    ./gizmo  test.tcl    >/dev/null
-
-
-
+export JIMLIB=../dlr:../dlrNative-src
+./jimsh  inspector.tcl  GLib  2.0
