--- a/inspector/build
+++ b/inspector/build
@@ -45,9 +45,9 @@ gcc $linkSO -o dlrNative.so  dlrNative.o  /usr/lib/x86_64-linux-gnu/libffi.a  $g
 cd $project
 export JIMLIB=../dlr:../dlrNative-src
 namePattern=application
-#./jimsh  inspector.tcl  refreshMeta  GLib 2.0  $namePattern
-#./jimsh  inspector.tcl  refreshMeta  Gio  2.0  $namePattern
-#./jimsh  inspector.tcl  refreshMeta  Gtk  3.0  $namePattern
-./jimsh  inspector.tcl  refreshMeta  GLib 2.0
-./jimsh  inspector.tcl  refreshMeta  Gio  2.0
-./jimsh  inspector.tcl  refreshMeta  Gtk  3.0
+#./jimsh  inspector.tcl  refreshMeta  GLib 2.0  libglib-2.0.so  $namePattern
+#./jimsh  inspector.tcl  refreshMeta  Gio  2.0  libgio-2.0.so   $namePattern
+#./jimsh  inspector.tcl  refreshMeta  Gtk  3.0  libgtk-3.so     $namePattern
+./jimsh  inspector.tcl  refreshMeta  GLib 2.0  libglib-2.0.so
+./jimsh  inspector.tcl  refreshMeta  Gio  2.0  libgio-2.0.so
+./jimsh  inspector.tcl  refreshMeta  Gtk  3.0  libgtk-3.so
